--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@myworkspace/scss": "file:libs/scss",
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
+    "components-font-awesome": "^5.4.2",
     "core-js": "^3.6.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
