--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@nrwl/cypress": "10.4.4"
   },
   "xplat": {
-    "prefix": "myworkspace",
+    "prefix": "nx",
     "framework": "angular"
   }
 }
